NEXT_RELEASE

Issue #11861
- QC executed and QC results variables are incorrectly typed

Issue #10777
- modify stream_engine to utilize deployment times to bound product generation requests

Release 1.2.3

Issue #11753
- Aggregation fails when string lengths differ between datasets

Issue #11715
- Added source attribute to the AnnotationRecord class to identify the creator of the data.

Release 1.2.2

Issue #11646
- Production generation fails if no asset management data exists for one or more deployments

Issue #11642
- Bumped preload database pointer (v1.0.1) for "bin sizes incorrect in preload database"

Release 1.2.1

Issue #11371
- Updated NetCDF header sensor asset management information

Release 1.2.0

Issue #11371
- Add sensor asset management information to NetCDF header

Release 1.1.2

Issue #11624
- Aggregation fails for CSV files

Issue #11623
- Aggregation fails if the aggregation host does not have any local files

Issue #11613
- Fixed hard-coded log level in util/gather.py

Release 1.1.1

Issue #11528
- Accept the "execute_dpa" flag. When set to false no data product algorithms will be executed.

Issue #10820
- Stream engine will create a status.txt file containing the string "complete" when aggregation is complete.

Updated preload database pointer

Release 1.1.0

Issue #10820 - NetCDF aggregation
- Stream engine will now aggregate the output from subjobs into one or more larger files

Release 1.0.3

Issue #11497 - Incorrectly building 2D string arrays
- Fixed an issue which caused some queries to abort when the requested stream contains string arrays

Release 1.0.2

Issue #11499 - Simplify overriding configuration values in Stream Engine
- Moved default configuration from config.py to config/default.py
- Created empty config/local.py to contain local config changes

Issue #11439 - Race condition in directory creation
- Fixed a potential race condition in directory creation
